--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -27,6 +27,7 @@
 @import './search-form/search-form';
 @import './upload-form/upload-form';
 @import './worksheet-form/worksheet-form';
+@import './message-form/message-form';
 @import './my-interview/my-interview';
 @import './search-candidate/search-candidate';
 @import './candidates-profile/candidates-profile';
