--- a/src/pages/candidate-search-recruiters.hbs
+++ b/src/pages/candidate-search-recruiters.hbs
@@ -75,7 +75,7 @@
                                            </div>
                                            <div class="candidate-recruiters__message-info">
                                                <div class="candidate-recruiters__message-title">Дмитро Пенчук</div>
-                                               <div class="candidate-recruiters__message-body">Exercitation veniam consequat sunt nostrud ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. </div>
+                                               <div class="candidate-recruiters__message-body">Exercitation veniam consequat sunt nostrud ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet nostrud amet. </div>
                                            </div>
                                        </div>
                                        <div class="candidate-recruiters__message-time">11:30</div>
@@ -95,14 +95,9 @@
                                </ul>
                            </li>
                         </ul>
-                        <form action="" class="messages-form">
-                            <div class="messages-form__line">
-                                <div class="messages-form__input-wrap">
-                                    <textarea class="messages-form__input" placeholder="Написати повідомлення"></textarea>
-                                </div>
-                                <button type="submit" class="the-button messages-form__submit">Надіслати</button>
-                            </div>
-                        </form>
+                    <div class="candidate-recruiters__form">
+                        {{> message-form }}
+                    </div>
                     </div>
                 </div>
             </div>
