--- a/src/pages/recruter-search-candidate-message-right.hbs
+++ b/src/pages/recruter-search-candidate-message-right.hbs
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside applicant__card">
-                    <div class="fraimed-container dashboard__container">
+                    <div class="fraimed-container applicant__card-container">
                         <div class="applicant__image">
                             <img src="./images/empty_photo.png" alt="">
                         </div>
