--- a/src/components/candidate-recruiters/candidate-recruiters.scss
+++ b/src/components/candidate-recruiters/candidate-recruiters.scss
@@ -1,4 +1,9 @@
 .candidate-recruiters {
+  padding-bottom: 45px;
+
+  @media(max-width: 1099px) {
+    padding-bottom: 0;
+  }
 
   &__container {
     padding: 28px 10px 8px;
@@ -182,6 +187,14 @@
       margin-bottom: 14px;
     }
   }
+
+  &__form {
+    padding: 22px 0 46px;
+
+    @media(max-width: 767px) {
+      padding: 20px 0;
+    }
+  }
 }
 
 .button-red {
@@ -191,77 +204,5 @@
   &:hover {
     color: #fff;
     background-color: $red;
-  }
-}
-
-.messages-form {
-  padding: 22px 0 76px;
-
-  @media(max-width: 767px) {
-    padding: 0 0 100px;
-  }
-
-  &__line {
-    display: flex;
-    justify-content: space-between;
-    height: 50px;
-    width: 100%;
-
-    @media(max-width: 767px) {
-      flex-direction: column;
-    }
-  }
-
-  &__input {
-    border: 1px solid #9090AB;
-    box-sizing: border-box;
-    border-radius: 2px 0 0 2px;
-    width: 100%;
-    height: 50px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.4;
-    letter-spacing: 0.05em;
-    color: $lightgray;
-    padding: 13px 43px;
-
-    @media(max-width: 767px) {
-      font-size: 14px;
-      line-height: 1.2;
-      padding: 10px;
-      height: 100px;
-    }
-
-    &-wrap {
-      width: 100%;
-      position: relative;
-
-      &:before {
-        position: absolute;
-        left: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-        content: '';
-        display: block;
-        width: 20px;
-        height: 20px;
-        background-image: url(../images/upload_gray.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-
-        @media(max-width: 767px) {
-          display: none;
-        }
-      }
-    }
-  }
-
-  &__submit {
-    border-radius: 0 2px 2px 0;
-    padding: 14px 23px;
-
-    @media(max-width: 767px) {
-      height: 35px;
-    }
   }
 }
