--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -7,7 +7,8 @@
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 12 <a href="./recruter-dashboard-empty.html">Dashboard (пуста) рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 2, 2.2 <a href="./recruter-search-candidate.html">Рекрутер переглядає профайл кандидата</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 2.3 <a href="./recruter-search-candidate-empty-right.html">Рекрутер переглядає профайл кандидата (пустий профiль кандидата)</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 2.3 <a href="./recruter-search-candidate-message-right.html">Рекрутер переглядає профайл кандидата (повiдомлення справа)</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 2.4 <a href="./recruter-search-candidate-message-bottom.html">Рекрутер переглядає профайл кандидата (повiдомлення знизу)</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 5, 5.2 <a href="./recruter-search-candidates-list.html">Рекрутер переглядає список кандидатiв</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 6 <a href="./recruitment-list.html">Рекрутер переглядає список наймiв</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 7, 7.2, 8 <a href="./candidates-profile.html">Кандидатський профайл</a></li>
