Added language selector to main-header

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -5,6 +5,7 @@
 @import './spinner/spinner';
 @import './radio/radio';
 @import './thumbler/thumbler';
+@import './form-styler/form-styler';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
 @import './social-media/social-media';
