--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -7,6 +7,13 @@
         <div class="main-header__nav main-menu">
             {{> nav }}
         </div>
+        <div class="main-header__langs">
+            <select name="lang" class="main-header__langs-selector">
+                <option value="1" class="main-header__langs-option">Ua</option>
+                <option value="2" class="main-header__langs-option">Ru</option>
+                <option value="3" class="main-header__langs-option">En</option>
+            </select>
+        </div>
         <div class="main-header__user logged">
             <a href="./auth.html" class="main-header__user-auth">
                 Увiйти
