--- a/src/pages/candidate-search-recruiters.hbs
+++ b/src/pages/candidate-search-recruiters.hbs
@@ -23,9 +23,10 @@
                         </div>
                     </div>
                     <div class="fraimed-container candidate-recruiters__buttons">
-                        <button class="the-button candidate-recruiters__button">Вiдкрити контакти</button>
-                        <button class="the-button candidate-recruiters__button">Пропозиція не цікава</button>
-                        <button class="the-button candidate-recruiters__button button-red">Відмовити</button>
+                        <button class="empty-button candidate-recruiters__button">Вiдкрити контакти</button>
+                        <button class="empty-button candidate-recruiters__button">Пропозиція не цікава</button>
+                        <button class="empty-button candidate-recruiters__button button-red">Відмовити</button>
+                        <button class="the-button candidate-recruiters__button button-interview">Запланувати Інтерв`ю</button>
                     </div>
                 </div>
                 <div class="inner-container__big dashboard__main">
