--- a/src/pages/candidates-account.hbs
+++ b/src/pages/candidates-account.hbs
@@ -18,7 +18,7 @@
                                             <div class="candidates-account__position">HR</div> in
                                             <a href="#" class="candidates-account__company">Interview.top</a>
                                         </div>
-                                        <button type="submit" class="the-button candidates-account__button">Змiнити фото</button>
+                                        <button type="submit" class="empty-button candidates-account__button">Змiнити фото</button>
                                     </div>
                                 </div>
                                 <div class="base__notes candidates-account__date">На сайтi з 04.06.2020</div>
