--- a/src/pages/candidates-profile.hbs
+++ b/src/pages/candidates-profile.hbs
@@ -4,8 +4,9 @@
         <section class="candidates-profile__import">
             <div class="candidates-profile__headline">
                 <h1 class="candidates-profile__title">Мiй акаунт</h1>
-                <button type="submit" class="the-button candidates-profile__button">
-                    <div class="candidates-profile__button-title">Імпортувати данні</div>
+                <button type="submit" class="empty-button candidates-profile__button">
+                    Імпортувати данні
+                    {{> icon iconName="cloud" classNames="cloud" }}
                 </button>
             </div>
             <div class="candidates-profile__activation">
