--- a/src/pages/candidates-settings.hbs
+++ b/src/pages/candidates-settings.hbs
@@ -2,7 +2,7 @@
 <div class="main-content dashboard__content">
     <div class="container">
         <section class="candidates-settings">
-            <a href="#" class="the-button candidates-settings__recruiter-link">Перейти у профіль рекрутера</a>
+            <a href="#" class="empty-button candidates-settings__recruiter-link">Перейти у профіль рекрутера</a>
             <h1 class="candidates-settings__title">Налаштування</h1>
             <div class="dashboard dashboard__two-columns candidates-settings__columns">
                 <div class="inner-container__small dashboard__aside candidates-settings__aside">
