--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -220,7 +220,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -241,7 +241,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -325,7 +325,7 @@
                                 </div>
                             </div>
                             <div class="scheduled-interview__comment">Перейти до</div>
-                            <button class="the-button scheduled-interview__button">
+                            <button class="empty-button scheduled-interview__button">
                                 <span class="interview__button-inner">
                                     {{> icon iconName="camera" classNames="camera" }}
                                     {{> icon iconName="zoom" classNames="zoom" }}
@@ -334,6 +334,10 @@
                         </div>
                     </a>
                 </div>
+                <button class="the-button scheduled-interviews__button">
+                        Запланувати
+                    {{> icon iconName="subscribe_white" classNames="plus-icon" }}
+                </button>
             </div>
         </section>
     </div>
