--- a/src/pages/recruter-search-candidate-message-bottom.hbs
+++ b/src/pages/recruter-search-candidate-message-bottom.hbs
@@ -128,17 +128,11 @@
                         <div class="applicant__image">
                             <img src="./images/empty_photo.png" alt="">
                         </div>
-                        <div class="applicant__card-message">
-                            <form action="" class="messages-form">
-                                <div class="messages-form__line">
-                                    <div class="messages-form__input-wrap">
-                                        <textarea class="messages-form__input" placeholder="Написати повідомлення"></textarea>
-                                    </div>
-                                    <button type="submit" class="the-button messages-form__submit">Надіслати</button>
-                                </div>
-                            </form>
-                        </div>
                     </div>
+                    <button class="empty-button applicant__button-interview">
+                        Запланувати Інтерв`ю
+                        {{> icon iconName="subscribe" classNames="plus-icon" }}
+                    </button>
                 </div>
             </div>
             <div class="applicant__interview">
