--- a/src/components/applicant/applicant.scss
+++ b/src/components/applicant/applicant.scss
@@ -149,12 +149,14 @@
 
     &-container2 {
       padding: 37px 20px 14px;
+      margin-bottom: 45px;
 
       @media(max-width: 1099px) {
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 37px 20px 37px;
+        margin-bottom: 24px;
       }
     }
 
@@ -246,7 +248,13 @@
     padding: 14px 26px;
 
     &-wrap {
-      max-width: 197px;
+      max-width: 100%;
+    }
+
+    &-interview {
+      @media(max-width: 1099px) {
+        margin: 0 auto 30px;
+      }
     }
   }
 
