--- a/src/components/candidates-profile/candidates-profile.scss
+++ b/src/components/candidates-profile/candidates-profile.scss
@@ -65,29 +65,6 @@
       margin-top: -20px;
       margin-bottom: 20px;
     }
-    
-    &:hover {
-      border-color: darken($blue, 40%);
-      color: darken($blue, 40%);
-      background-color: transparent;
-    }
-
-    &-title {
-      display: flex;
-
-      &:after {
-        content: '';
-        display: block;
-        width: 13px;
-        height: 13px;
-        background-image: url(../images/upload.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-        margin-left: 7px;
-        margin-top: 1px;
-      }
-    }
-
   }
 
   &__upload {
@@ -130,4 +107,11 @@
       }
     }
   }
+}
+
+.cloud {
+  fill-opacity: 0;
+  width: 13px;
+  height: 13px;
+  margin: 1px 0 0 7px;
 }
