--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,8 @@
+@import './svg-icons/svg-icons';
 @import './container/container';
+@import './the-button/the-button';
+@import './modal/modal';
+@import './callback/callback';
 @import './star/star';
 @import './trash/trash';
 @import './reg-form/reg-form';
@@ -10,11 +14,10 @@
 @import './menu-toggle/menu-toggle';
 @import './social-media/social-media';
 @import './fraimed-container/fraimed-container';
-@import './dropdown/dropdown';
+@import './dropdown-toggle/dropdown-toggle';
 @import './salary-filter/salary-filter';
 @import './filters/filters';
 @import './main-menu/main-menu';
-@import './the-button/the-button';
 @import './load-more/load-more';
 @import './main-header/main-header';
 @import './main-content/main-content';
