--- a/src/components/recruitment-form/recruitment-form.hbs
+++ b/src/components/recruitment-form/recruitment-form.hbs
@@ -8,7 +8,7 @@
             або оберіть його зі списку</div>
         <input type="text" class="recruitment-form__field" id="email" value="RandomEmail@gmail.com">
     </div>
-    <div class="recruitment-form__candidates">
+    <ul class="recruitment-form__candidates">
         <li class="recruitment-form__candidate">
             <input name="candidate" class="radio__input" type="radio" id="cand1" value="cand1" checked="">
             <label for="cand1" class="radio__label  radio__label_candidate recruitment-form__candidate-wrap">
@@ -37,6 +37,6 @@
             </div>
 
         </li>
-    </div>
+    </ul>
     <button class="the-button recruitment-form__submit">Пiдтвердити</button>
 </form>
