--- a/src/components/reg-form/reg-form.hbs
+++ b/src/components/reg-form/reg-form.hbs
@@ -31,11 +31,11 @@
     <div class="reg-form__social">
         <div class="reg-form__notice reg-form__social-notice">Або увiйти за допомогою</div>
         <div class="reg-form__social-links">
-            <button class="reg-form__social-link">
+            <button class="empty-button reg-form__social-link">
                 <div class="reg-form__social-name">Google</div>
                 {{> icon iconName="google" classNames="social-link" }}
             </button>
-            <button class="reg-form__social-link linkedin-button">
+            <button class="empty-button reg-form__social-link linkedin-button">
                 <div class="reg-form__social-name">LinkedIn</div>
                 {{> icon iconName="linkedin" classNames="social-link" }}
             </button>
