--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -1,6 +1,7 @@
 .registration {
   max-width: 512px;
   margin: 0 auto;
+  padding: 56px 67px 64px;
 
   @media(max-width: 575px) {
     padding: 30px;
