--- a/src/pages/recruitment-list.hbs
+++ b/src/pages/recruitment-list.hbs
@@ -14,7 +14,7 @@
                         <div class="offer__comission">$800</div>
                         <div class="offer__contact offer__contact_opened">Сплачено</div>
                         <div class="offer__menu">
-                            {{> dropdown }}
+                            {{> dropdown-toggle }}
                         </div>
                     </div>
                     <div class="offer recruitment-list">
@@ -26,7 +26,7 @@
                         <div class="offer__comission">$750</div>
                         <div class="offer__contact offer__contact_alert">Чекає на оплату</div>
                         <div class="offer__menu">
-                            {{> dropdown }}
+                            {{> dropdown-toggle }}
                         </div>
                     </div>
                     <div class="offer recruitment-list">
@@ -38,7 +38,7 @@
                         <div class="offer__comission">$500</div>
                         <div class="offer__contact offer__contact_alert">Чекає на оплату</div>
                         <div class="offer__menu">
-                            {{> dropdown }}
+                            {{> dropdown-toggle }}
                         </div>
                     </div>
                 </div>
