--- a/src/pages/registration.hbs
+++ b/src/pages/registration.hbs
@@ -1,7 +1,7 @@
 {{> main-header }}
     <div class="main-content">
         <div class="container">
-           <section class="fraimed-container registration">
+           <section class="frame registration">
                 <h1 class="registration__title">Реєстрацiя</h1>
                <div class="registration__form">
                    {{> reg-form }}
