--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -32,6 +32,15 @@
     @media(max-width: 991px) {
       font-size: 24px;
     }
+
+    &-icon {
+      width: 128px;
+
+      @media(max-width: 499px) {
+        width: 120px;
+        margin: 0 10px;
+      }
+    }
   }
 
   &__nav {
@@ -63,7 +72,7 @@
         margin-right: 0;
       }
       
-      .dropdown {
+      .dropdown-toggle {
 
         &__icon {
           span, 
@@ -118,7 +127,7 @@
       text-decoration: none;
       color: #fff;
 
-      .dropdown {
+      .dropdown-toggle {
 
         &__icon {
           span,
@@ -246,10 +255,6 @@
     }
   }
 
-  .notice {
-    width: 24px;
-    height: 24px;
-  }
 }
 
 .main-header__langs {
