--- a/src/pages/candidates-profile.hbs
+++ b/src/pages/candidates-profile.hbs
@@ -16,14 +16,14 @@
 
             <div class="dashboard">
                 <div class="dashboard__section candidates-profile__upload">
-                    <div class="fraimed-container candidates-profile__upload-container">
+                    <div class="frame candidates-profile__upload-container">
                         <div class="candidates-profile__upload-form">
                             {{> upload-form }}
                         </div>
                     </div>
                 </div>
                 <div class="dashboard__section candidates-profile__worksheet">
-                    <div class="candidates-profile__worksheet-container fraim">
+                    <div class="frame candidates-profile__worksheet-container">
                         <div class="candidates-profile__worksheet-form">
                             {{> worksheet-form }}
                         </div>
