--- a/src/components/callback/callback.scss
+++ b/src/components/callback/callback.scss
@@ -47,7 +47,7 @@
 
       @media(max-width: 639px) {
         padding-left: 0;
-        height: 150px;
+        height: 250px;
       }
     }
 
@@ -79,6 +79,10 @@
     &__info {
       display: flex;
       margin-bottom: 36px;
+
+      @media(max-width: 639px) {
+        margin-bottom: 18px;
+      }
 
       &-left {
         width: 350px;
@@ -138,6 +142,7 @@
       &-select {
         width: 120px;
         height: 38px;
+        background-color: #fff;
         border-radius: 2px;
         border: 1px solid #E6ECF5;
         color: $gray;
