--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -31,6 +31,11 @@
       width: 100%;
       height: auto;
     }
+
+    @media(max-width: 374px) {
+      padding: 25px 20px;
+      min-width: 300px;
+    }
   }
 
   &__close {
